@@ -20,6 +20,7 @@ BZFlag 1.7e3
 * new sounds - Dave Brosius
 * warnings - Dave Brosius
 * saver placement - Frank Thilo
+* don't color shots when CB - Valery Fouques
 
 BZFlag 1.7e2
 ------------
